# vcnoi

./: .gitattributes  .gitignore  CONTRIBUTE.md  Dockerfile  Makefile  README.md  flake.nix  pyproject.toml
scripts/: border  compile  run  shrink  stitch
src/avs/civilized_uncivilized/: __main__.py
src/avs/civilized_uncivilized/assets/: transcript.txt  works.yaml
src/avs/do_for_self/: __main__.py
src/avs/do_for_self/assets/: transcript.txt  works.yaml
src/avs/education_center/: __main__.py
src/avs/education_center/assets/: transcript.txt  works.yaml
src/avs/our_great_physician/: __main__.py
src/avs/our_great_physician/assets/: transcript.txt  works.yaml
src/avs/pacchikari_in_agra/: __main__.py
src/avs/pacchikari_in_agra/assets/: transcript.txt
src/avs/rashid_al_din/: __main__.py
src/avs/rashid_al_din/assets/: transcript.txt
src/avs/unite_and_do_for_self/: __main__.py
src/avs/unite_and_do_for_self/assets/: transcript.txt  works.yaml
src/avs/whom_shall_you_serve/: __main__.py
src/avs/whom_shall_you_serve/assets/: transcript.txt  works.yaml
src/avs/world_serpent/: __main__.py
src/avs/world_serpent/assets/: transcript.txt  works.yaml
src/lib/: __init__.py
src/lib/emphasis/: __init__.py
src/lib/epicycle/: __init__.py
src/lib/intro/: __init__.py
src/lib/metascene/: __init__.py
src/lib/paths/: __init__.py
src/lib/pixels/: __init__.py
src/lib/slides/: __init__.py
src/lib/stroke/: __init__.py
src/lib/timestamp/: __init__.py
src/psjs/: copy-selection-desc.psjs
