[project]
name = "lib"
version = "0.1.0"
description = "a domain-specific Manim wrapper library for voiceover animations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "manim>=0.19.0",
    "pillow>=11.1.0",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
module-name = ["lib"]

[tool.basedpyright]
include = ["src"]
typeCheckingMode = "all"
reportAny = false
reportExplicitAny = false
reportImplicitStringConcatenation = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN401", "D203", "D213", "E731"] # Any + contradictiory docstring rules + lambda assignment.

[tool.ruff.lint.per-file-ignores]
"src/*" = ["D104"]
"src/avs/*" = ["D100", "D101", "INP001", "RUF012"]
"src/lib/*" = ["TID252"]
